Improving platform recognition

--- a/meta/main.yaml
+++ b/meta/main.yaml
@@ -6,7 +6,9 @@ galaxy_info:
   license: MIT
   min_ansible_version: 1.7
   platforms:
-    - name: Redhat
+    - name: EL
+      versions:
+        - all
   categories:
     - system
 dependencies: []
