Allow better customization

--- a/tasks/main.yaml
+++ b/tasks/main.yaml
@@ -7,6 +7,6 @@
 - name: Configure yum.conf
   template:
     src: yum.conf.j2
-    dest: /etc/yum.conf
+    dest: "{{ yumconf_config_file }}"
   tags:
     - yumconf_config
