--- a/tasks/main.yaml
+++ b/tasks/main.yaml
@@ -3,6 +3,8 @@
 - name: Test distribution
   assert:
     that: ansible_os_family == "RedHat"
+  tags:
+    - yumconf_assert
 
 - name: Configure yum.conf
   template:
